--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
 
-        <h1>GitHub Repositories List<img src="githubicon.png" alt="GitHub Icon" width="96" height="96"></h1>
+        <h1>GitHub Repositories Viewer<img src="githubicon.png" alt="GitHub Icon" width="96" height="96"></h1>
         <div class="input-box">
             <label for="username">GitHub Username:</label>
             <input type="text" id="username" placeholder="Enter GitHub username">
